app/src/components/issues/issues.css
.issues-panel {
  max-width: 1062px;
  min-width: 940px;
  height: 630px;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  padding-left: 1.5vh;
}
.current-issue-panel {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  width: 88%;
}
.issue-view-title {
  letter-spacing: 8px;
  color: #000000;
  margin-top: 1em;
  margin-bottom: 1em;
}
.issue-viewer {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 800px;
  height: 60vh;
}
.issue-special-title {
  letter-spacing: 8px;
  color: #000000;
  margin-top: 1.2em;
}
.issue-special-content {
  line-height: 1.77;
  color: #000000;
  white-space: pre-line;
}
.issue-list-panel {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  width: 12%;
  min-height: 100%;
  overflow: auto;
}
.issue-list-link {
  margin-top: 2em;
  text-decoration: none;
}
.issue-list-text {
  line-height: 1.77;
  text-align: center;
  color: #000000;
}

@media only screen and (max-width: 800px) { 
  .issues-panel {
    min-width: 0;
    height: auto;
    max-height: none;
    flex-direction: column;
    padding-left: 0;
  }
  .current-issue-panel {
    display: flex;
    flex-direction: column;
    width: 100%;
  }
  .issue-view-title {
    margin-left: 5vh;
  }
  .issue-viewer {
    display: flex;
    width: 100vw;
    height: 50vh;
  }
  .issue-special-title {
    height: 0;
    margin: 0;
    visibility: hidden;
  }
  .issue-special-content {
    height: 0;
    margin: 0;
    visibility: hidden;
  }
  .issue-list-panel {
    display: flex;
    flex-direction: row;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
  }
  .issue-list-link {
    display: inline-block;
    margin-top: 2vh;
    margin-bottom: 2vh;
    margin-left: 0.5vh;
    margin-right: 0.5vh;
  }
  .issue-list-text {
    height: 0;
    margin: 0;
    visibility: hidden;
  }
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .issue-list-link {
    flex: 0 0 auto;
  }
}

